syntax = "proto3";

option csharp_namespace = "GrpcServer";

service Customer{
	rpc GetCustomerInfo(CustomerLookupModel) returns (CustomerModel);
	//grpc no acepta metodos que no reciben parametros
	//lo mejor para ello es definir un modelo vacio
	rpc GetNewCustomer(NewCustomerRequest) returns(stream CustomerModel);
}

message NewCustomerRequest{

}

message CustomerLookupModel{
	int32 userId=1; //tipos basicos, bool, int32, float, double, string. 
}

message CustomerModel{
	string firstName=1;
	string lastName=2;
	string email=3;
	bool isAlive=4;
	int32 age=5;
}